--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
     <header class="intro">
        <!-- image code here -->
+       <img src="img/main-header.png" alt="image of the curvature of earth from space">
 
       <h2>Lift Off</h2>
     
